OCR datalab models

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SECRET_KEY=your-secret-key-here
 # CORS (comma-separated or JSON array)
 BACKEND_CORS_ORIGINS=http://localhost:5173,http://localhost:3000,https://picrete.com,https://www.picrete.com
 
-FIRST_SUPERUSER_ISU=000000
+FIRST_SUPERUSER_USERNAME=admin
 FIRST_SUPERUSER_PASSWORD=change-me
 
 # Database
@@ -32,6 +32,16 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 AI_MODEL=gpt-5
 AI_MAX_TOKENS=10000
 AI_REQUEST_TIMEOUT=600
+
+# DataLab Marker OCR
+DATALAB_API_KEY=your-datalab-api-key
+DATALAB_BASE_URL=https://www.datalab.to/api/v1
+DATALAB_MODE=accurate
+DATALAB_OUTPUT_FORMAT=chunks,markdown
+DATALAB_TIMEOUT_SECONDS=120
+DATALAB_POLL_INTERVAL_SECONDS=2
+DATALAB_MAX_POLL_ATTEMPTS=120
+DATALAB_MAX_SUBMIT_RETRIES=3
 
 # File Upload
 MAX_UPLOAD_SIZE_MB=10
