--- a/.env.example
+++ b/.env.example
@@ -47,9 +47,13 @@ DATALAB_MAX_SUBMIT_RETRIES=3
 MAX_UPLOAD_SIZE_MB=10
 MAX_IMAGES_PER_SUBMISSION=10
 MAX_CONCURRENT_EXAMS=150
+TASK_BANK_ROOT=tasks/Sviridov_tasks
+TASK_BANK_MEDIA_ROOT=tasks/Sviridov_tasks/ocr_output/Sviridov_tasks
+ADDITIONAL_MATERIALS_PDF=tasks/Sviridov_tasks/ocr_output/Sviridov_tasks/addition.pdf
 
 PROMETHEUS_ENABLED=true
 PICRETE_LOG_LEVEL=info
 PICRETE_LOG_JSON=true
 PICRETE_ENV=production
 PICRETE_STRICT_CONFIG=1
+COURSE_CONTEXT_MODE=route
