--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ BACKEND_CORS_ORIGINS=http://localhost:5173,http://localhost:3000,https://picrete
 FIRST_SUPERUSER_USERNAME=admin
 FIRST_SUPERUSER_PASSWORD=change-me
 
+# TG token
+TG_TOKEN=776677.....
+TELEGRAM_BOT_ENABLED=false
+TELEGRAM_POLL_TIMEOUT_SECONDS=30
+
 # Database
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
