--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ jsonwebtoken = "9"
 rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-sqlx = { version = "0.7.4", default-features = false, features = ["json", "macros", "migrate", "postgres", "runtime-tokio", "time", "uuid"] }
+sqlx = { version = "0.8.6", default-features = false, features = ["derive", "json", "migrate", "postgres", "runtime-tokio", "time", "uuid"] }
 thiserror = "1"
 time = { version = "0.3", features = ["macros", "serde"] }
 tokio = { version = "1", features = ["full"] }
@@ -26,9 +26,9 @@ redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
 reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
 metrics = "0.22"
 metrics-exporter-prometheus = "0.14"
-aws-config = "1"
-aws-credential-types = "1"
-aws-sdk-s3 = "1"
+aws-config = "1.8.12"
+aws-credential-types = "1.2.11"
+aws-sdk-s3 = "1.119.0"
 hex = "0.4"
 sha2 = "0.10"
 validator = { version = "0.20.0", features = ["derive"] }
