--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -45,6 +45,9 @@ services:
       - S3_REGION=${S3_REGION}
       - MAX_UPLOAD_SIZE_MB=${MAX_UPLOAD_SIZE_MB}
       - MAX_IMAGES_PER_SUBMISSION=${MAX_IMAGES_PER_SUBMISSION}
+      - TG_TOKEN=${TG_TOKEN}
+      - TELEGRAM_BOT_ENABLED=${TELEGRAM_BOT_ENABLED:-false}
+      - TELEGRAM_POLL_TIMEOUT_SECONDS=${TELEGRAM_POLL_TIMEOUT_SECONDS:-30}
       - PROMETHEUS_ENABLED=${PROMETHEUS_ENABLED}
       - PICRETE_LOG_LEVEL=${PICRETE_LOG_LEVEL}
       - PICRETE_LOG_JSON=${PICRETE_LOG_JSON}
@@ -109,6 +112,9 @@ services:
       - S3_SECRET_KEY=${S3_SECRET_KEY}
       - S3_BUCKET=${S3_BUCKET}
       - S3_REGION=${S3_REGION}
+      - TG_TOKEN=${TG_TOKEN}
+      - TELEGRAM_BOT_ENABLED=${TELEGRAM_BOT_ENABLED:-false}
+      - TELEGRAM_POLL_TIMEOUT_SECONDS=${TELEGRAM_POLL_TIMEOUT_SECONDS:-30}
       - PROMETHEUS_ENABLED=${PROMETHEUS_ENABLED}
       - PICRETE_LOG_LEVEL=${PICRETE_LOG_LEVEL}
       - PICRETE_LOG_JSON=${PICRETE_LOG_JSON}
@@ -118,6 +124,57 @@ services:
         limits:
           cpus: "0.5"
           memory: 1024M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  telegram-bot:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    network_mode: host
+    command: ["picrete-telegram-bot"]
+    volumes:
+      - ./tasks:/app/tasks:ro
+    environment:
+      - COURSE_CONTEXT_MODE=route
+      - POSTGRES_SERVER=localhost
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - FIRST_SUPERUSER_USERNAME=${FIRST_SUPERUSER_USERNAME}
+      - FIRST_SUPERUSER_PASSWORD=${FIRST_SUPERUSER_PASSWORD}
+      - PICRETE_ENV=${PICRETE_ENV}
+      - PICRETE_STRICT_CONFIG=${PICRETE_STRICT_CONFIG}
+      - TASK_BANK_ROOT=${TASK_BANK_ROOT:-/app/tasks/Sviridov_tasks}
+      - TASK_BANK_MEDIA_ROOT=${TASK_BANK_MEDIA_ROOT:-/app/tasks/Sviridov_tasks/ocr_output/Sviridov_tasks}
+      - ADDITIONAL_MATERIALS_PDF=${ADDITIONAL_MATERIALS_PDF:-/app/tasks/Sviridov_tasks/ocr_output/Sviridov_tasks/addition.pdf}
+      - REDIS_HOST=localhost
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - SECRET_KEY=${SECRET_KEY}
+      - TG_TOKEN=${TG_TOKEN}
+      - TELEGRAM_BOT_ENABLED=${TELEGRAM_BOT_ENABLED:-true}
+      - TELEGRAM_POLL_TIMEOUT_SECONDS=${TELEGRAM_POLL_TIMEOUT_SECONDS:-30}
+      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ACCESS_KEY=${S3_ACCESS_KEY}
+      - S3_SECRET_KEY=${S3_SECRET_KEY}
+      - S3_BUCKET=${S3_BUCKET}
+      - S3_REGION=${S3_REGION}
+      - MAX_UPLOAD_SIZE_MB=${MAX_UPLOAD_SIZE_MB}
+      - MAX_IMAGES_PER_SUBMISSION=${MAX_IMAGES_PER_SUBMISSION}
+      - PROMETHEUS_ENABLED=${PROMETHEUS_ENABLED}
+      - PICRETE_LOG_LEVEL=${PICRETE_LOG_LEVEL}
+      - PICRETE_LOG_JSON=${PICRETE_LOG_JSON}
+    restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: 512M
     logging:
       driver: "json-file"
       options:
