--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -169,6 +169,22 @@ services:
       - PROMETHEUS_ENABLED=${PROMETHEUS_ENABLED}
       - PICRETE_LOG_LEVEL=${PICRETE_LOG_LEVEL}
       - PICRETE_LOG_JSON=${PICRETE_LOG_JSON}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_BASE_URL=${OPENAI_BASE_URL}
+      - AI_MODEL=${AI_MODEL}
+      - AI_MAX_TOKENS=${AI_MAX_TOKENS}
+      - AI_REQUEST_TIMEOUT=${AI_REQUEST_TIMEOUT}
+      - DATALAB_API_KEY=${DATALAB_API_KEY}
+      - DATALAB_BASE_URL=${DATALAB_BASE_URL}
+      - DATALAB_MODE=${DATALAB_MODE}
+      - DATALAB_OUTPUT_FORMAT=${DATALAB_OUTPUT_FORMAT}
+      - DATALAB_TIMEOUT_SECONDS=${DATALAB_TIMEOUT_SECONDS}
+      - DATALAB_POLL_INTERVAL_SECONDS=${DATALAB_POLL_INTERVAL_SECONDS}
+      - DATALAB_MAX_POLL_ATTEMPTS=${DATALAB_MAX_POLL_ATTEMPTS}
+      - DATALAB_MAX_SUBMIT_RETRIES=${DATALAB_MAX_SUBMIT_RETRIES}
+      - BACKEND_CORS_ORIGINS=${BACKEND_CORS_ORIGINS}
+      - S3_ENDPOINT=${S3_ENDPOINT}
+ 
     restart: always
     deploy:
       resources:
